crates/bevy_ecs/compile_fail/tests/ui/constraint_forbid_violation.rs
//@compile-flags: -Cdebug-assertions
use bevy_ecs::prelude::*;

#[derive(Component)]
struct Enemy;

#[derive(Component)]
#[constraint(forbid(Enemy))]
struct Player;

#[derive(Bundle)]
//~^ E0080
struct BadBundle {
    player: Player,
    enemy: Enemy,
}

fn main() {}
